5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1573_1334.log
== TEST (2019-03-18 13:18:39) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print(round("Divisao: ", 16/2))

print("Resto: ", 80//9)

print("Potenciacao: ", 2**3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("Divisao: ", 16/2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:19:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", 80//9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80//9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:20:11) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", 80 // 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 // 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:20:58) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:21:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 13:22:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.18465
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:22:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 13:22:58) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", 80%9)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.123428
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 9
    print("Resto: ", 80%9)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:23:07) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", 80%9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80%9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 13:23:13) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", (80%9))

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.134258
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 9
    print("Resto: ", (80%9))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:23:14) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", (80%9))

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", (80%9))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:23:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", (80 / 9))

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", (80 / 9))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 13:24:16) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.187385
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:24:17) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:24:53) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2 ,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:25:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:" (round( 16/2 ,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:25:16) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:"(round( 16/2 ,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:25:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:", (round( 16/2 ,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:25:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:", ,(round( 16/2 ,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("Divisao:", ,(round( 16/2 ,1))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:25:40) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:",(round( 16/2 ,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:25:57) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:",(round( 16/2 ,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:26:06) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:",,
		(round( 16/2 ,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("Divisao:",,
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:27:09) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)

print("Divisao:",(round( 16/2 ,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:28:16) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = round( 16/2 ,1)
print("Divisao:",(round( a,1))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:28:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = round( 16/2 ,1)
print("Divisao:",(round(a))

print("Resto: ", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:30:12) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = round( 16/2 ,1)
print("Divisao:",(round(a))

print("Resto:", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 10
    print("Resto:", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:30:38) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = round( 16/2 ,1)
print("Divisao:",(round(a))

print("Resto:", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 10
    print("Resto:", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 13:32:04) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))

print("Resto:", 80 % 9)

print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.199194
-- ERROR:
  File "/home/codebench/codes/1573/1334/main.py", line 10
    print("Resto:", 80 % 9)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:32:04) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))

print("Resto:", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 10
    print("Resto:", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:33:45) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("Resto:", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto:", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:34:20) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print ("Resto:", 80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print ("Resto:", 80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:35:24) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("Resto:", (80 % 9))

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto:", (80 % 9))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:36:57) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print(80//9)
print("Resto:", (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print(80//9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:37:06) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print (80//9)
print("Resto:", (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print (80//9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:37:19) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1)) print (80//9)
print("Resto:", (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 8
    print("Divisao:",(round(a,1)) print (80//9)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:37:36) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print (80//9)
print("Resto:", (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print (80//9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:48:28) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print (80//9)
print("Resto:", (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print (80//9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:49:15) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print (80//9)
print("Resto:", (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print (80//9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:49:47) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print (80//9)
print(int("Resto:", (80 % 9))

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print (80//9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:50:08) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))

print(int("Resto:", (80 % 9))

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 10
    print(int("Resto:", (80 % 9))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:50:30) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))

print(int("Resto:", (80 % 9))

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 10
    print(int("Resto:", (80 % 9))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:50:41) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))

print("Resto:", (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 10
    print("Resto:", (80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:50:47) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))

print("Resto:" (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 10
    print("Resto:" (80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:54:12) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))

print("Resto:", (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 10
    print("Resto:", (80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:54:24) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))

("Resto:", (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 12
    print("Potenciacao: ", 2**3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:54:56) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
("Resto:", (80 % 9)

print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2**3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:55:10) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)

print("Subtracao: ", 16 - 8)

print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("Resto:", (80 % 9)
print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 9
    print("Resto:", (80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:55:27) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("Resto:", (80 % 9)
print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("Resto:", (80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:55:37) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("Resto:", (80 % 9)
print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("Resto:", (80 % 9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:55:46) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("Resto:", (80%9)
print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("Resto:", (80%9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:55:58) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("resto:", (80%9)
print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("resto:", (80%9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:56:11) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("Resto: ", (80%9)
print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("Resto: ", (80%9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:59:52) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("Resto: ", (80%9)
print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("Resto: ", (80%9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 14:00:25) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("Resto: ", (80%9)
print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("Resto: ", (80%9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 14:00:30) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 2 * 4)
a = 16/2
print("Divisao:",(round(a,1))
print("Resto: ", 80%9)
print("Potenciacao: ", 2**3)
-- ERROR:
File "XXXX", line 7
    print("Resto: ", 80%9)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 14:01:11) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 2 * 4)
print("Divisao:", 16 / 2)
print("Resto: ", 80%9)
print("Potenciacao: ", 2**3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao: 8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 14:01:43) 
-- CODE:
from math import *
print("Adicao: ", 5 + 3)
print("Subtracao: ", 16 - 8)
print("Multiplicacao: ", 2 * 4)
print("Divisao:", 16 / 2)
print("Resto: ", 80%9)
print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.289974
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao: 8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
